--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pnpm": ">=8.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "@electron/rebuild": "^4.0.2",
+    "typescript": "^5.9.3"
   }
 }
