--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@electron/rebuild": "^4.0.2",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/geojson": "^7946.0.16",
     "@types/node": "^25.0.10",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
