--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -13,7 +13,8 @@
     "@placemark/core": "workspace:*",
     "better-sqlite3": "^12.6.2",
     "exifr": "^7.1.3",
-    "maplibre-gl": "^5.16.0"
+    "maplibre-gl": "^5.16.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@electron/rebuild": "^4.0.2",
