"Phase 3.5 Beautification: Complete all backlog items
Critical Bug Fixes (4):
- Fix heatmap visibility in light mode with vibrant color ramp
- Fix timeline crash when filtering shows 0 photos (allPhotos.length check)
- Fix implausible dates in modal view (removed incorrect *1000 multiplication)
- Fix thumbnail errors for missing/corrupted files (file validation + silent VipsJpeg errors)

UX Improvements (4):
- Hide menu bar by default (autoHideMenuBar: true, press Alt to show)
- Show individual photos 2 zoom levels earlier (clusterMaxZoom 14 vs 16)
- Make Settings modal scrollable on any screen size (maxHeight: 90vh)
- Add in-memory thumbnail cache in renderer (instant hover after first load)

Feature Additions (4):
- Respect EXIF orientation in thumbnails (sharp .rotate())
- Add Database Management section to Settings
  * Display sizes for both databases (placemark.db, thumbnails.db)
  * Show total photo count and combined size
  * Centralize all database operations in Settings
  * Remove Clear Database button from main page
- Add optional uninstaller data cleanup (NSIS script)
  * Prompt user during uninstall: 'Remove all user data?'
  * Opt-in via Yes/No dialog
  * Removes AppData\Roaming\@placemark\desktop if confirmed
- Smart separation of overlapping points
  * Detect photos with identical GPS coordinates
  * Arrange overlapping photos in circular pattern
  * Offset distance: ~10m (0.0001°), invisible at normal zoom
  * First photo stays at original position, others offset
  * All photos now individually clickable

Files changed: 12 files
- Main: index.ts (menu bar)
- IPC: photos.ts (getDatabaseStats handler)
- Services: thumbnails.ts (rotate, file validation, error handling)
- Preload: index.ts (getDatabaseStats binding)
- Components: MapView.tsx (offset function, in-memory cache, heatmap colors)
- Components: Settings.tsx (Database Management section, clustering default)
- Components: App.tsx (removed Clear DB button, fixed timestamp)
- Config: electron-buil

--- a/packages/desktop/electron-builder.yml
+++ b/packages/desktop/electron-builder.yml
@@ -11,6 +11,11 @@ win:
   target:
     - nsis
   signAndEditExecutable: false
+nsis:
+  oneClick: false
+  allowToChangeInstallationDirectory: true
+  deleteAppDataOnUninstall: false
+  include: build/uninstaller.nsh
 mac:
   target:
     - dmg
