--- a/packages/desktop/electron-builder.yml
+++ b/packages/desktop/electron-builder.yml
@@ -3,19 +3,21 @@ productName: Placemark
 directories:
   buildResources: build
   output: release
+icon: ../../icon.png
 files:
   - dist/**/*
   - dist-electron/**/*
   - package.json
+  - '!node_modules/@img/sharp-{darwin,linux,win32-arm64,win32-ia32,linuxmusl,wasm32}*/**'
+  - '!node_modules/@img/sharp-libvips-{darwin,linux,linuxmusl}*/**'
+  - '!node_modules/@emnapi/runtime/**'
 win:
   target:
-    - nsis
+    - target: portable
+      arch: [x64]
   signAndEditExecutable: false
-nsis:
-  oneClick: false
-  allowToChangeInstallationDirectory: true
-  deleteAppDataOnUninstall: false
-  include: build/uninstaller.nsh
+portable:
+  artifactName: '${productName}-${version}-portable.exe'
 mac:
   target:
     - dmg
