--- a/packages/desktop/electron-builder.yml
+++ b/packages/desktop/electron-builder.yml
@@ -7,6 +7,7 @@ icon: ../../icon.png
 files:
   - dist/**/*
   - dist-electron/**/*
+  - build/icon.png
   - package.json
   - '!node_modules/@img/sharp-{darwin,linux,win32-arm64,win32-ia32,linuxmusl,wasm32}*/**'
   - '!node_modules/@img/sharp-libvips-{darwin,linux,linuxmusl}*/**'
