Feat: Add splash screen for smoother startup

--- a/packages/desktop/electron-builder.yml
+++ b/packages/desktop/electron-builder.yml
@@ -8,6 +8,7 @@ files:
   - dist/**/*
   - dist-electron/**/*
   - build/icon.png
+  - splash.html
   - package.json
   - '!node_modules/@img/sharp-{darwin,linux,win32-arm64,win32-ia32,linuxmusl,wasm32}*/**'
   - '!node_modules/@img/sharp-libvips-{darwin,linux,linuxmusl}*/**'
