--- a/packages/desktop/electron-builder.yml
+++ b/packages/desktop/electron-builder.yml
@@ -8,7 +8,6 @@ files:
   - dist/**/*
   - dist-electron/**/*
   - build/icon.png
-  - splash.html
   - package.json
   - '!node_modules/@img/sharp-{darwin,linux,win32-arm64,win32-ia32,linuxmusl,wasm32}*/**'
   - '!node_modules/@img/sharp-libvips-{darwin,linux,linuxmusl}*/**'
@@ -20,6 +19,7 @@ win:
   signAndEditExecutable: false
 portable:
   artifactName: '${productName}-${version}-portable.exe'
+  splashImage: build/splash.bmp
 mac:
   target:
     - dmg
