--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@placemark/desktop",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "private": true,
   "description": "Placemark desktop application built with Electron",
   "author": "Placemark",
@@ -16,6 +16,7 @@
     "@placemark/core": "workspace:*",
     "better-sqlite3": "^12.6.2",
     "exifr": "^7.1.3",
+    "lucide-react": "^0.563.0",
     "maplibre-gl": "^5.16.0",
     "sharp": "^0.34.5"
   },
@@ -29,6 +30,7 @@
     "@vitejs/plugin-react": "^5.1.2",
     "electron": "^40.0.0",
     "electron-builder": "^26.4.0",
+    "electron-builder-squirrel-windows": "^26.4.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "typescript": "^5.9.3",
