--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,4 +4,8 @@ packages:
 ignoredBuiltDependencies:
   - better-sqlite3
   - electron
+  - electron-winstaller
   - esbuild
+
+onlyBuiltDependencies:
+  - sharp
