fix: v0.4.1 - critical bug fixes and security hardening
Critical Bug Fixes:
- Fix latitude/longitude 0 bug affecting Gulf of Guinea coordinates
- Fix version reporting using app.getVersion() instead of brittle file reads
- Fix native dependency builds (better-sqlite3 rebuild for Electron ABI)

Security Improvements:
- IPC hardening: Pass photo IDs instead of raw paths/objects
- Strict opType validation and destination path checks
- Prevent arbitrary file access and system folder operations

Documentation:
- Add privacy guarantees to README and About section
- Simplify version management script (3 files instead of 4)
- Update copilot instructions with proper workflow

--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@placemark/desktop",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "private": true,
   "description": "Placemark desktop application built with Electron",
   "author": "Placemark",
@@ -10,7 +10,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "electron-rebuild"
   },
   "dependencies": {
     "@placemark/core": "workspace:*",
