--- a/packages/desktop/electron-builder.yml
+++ b/packages/desktop/electron-builder.yml
@@ -20,6 +20,7 @@ files:
   - '!node_modules/better-sqlite3/deps/**'
   - '!node_modules/better-sqlite3/src/**'
 win:
+  icon: build/icons/win/icon.ico
   target:
     - target: portable
       arch: [x64]
